--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "description": "",
   "dependencies": {
     "axios": "^1.13.2",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
     "passport": "^0.7.0",
