--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "path": "^0.12.7",
+    "socket.io": "^4.8.3",
     "websocket": "^1.0.35"
   }
 }
