--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
+    "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "path": "^0.12.7",
+    "puppeteer-core": "^24.35.0",
     "socket.io": "^4.8.3",
     "websocket": "^1.0.35"
   }
