--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.13.2",
+    "canvas": "^3.2.1",
     "cheerio": "^1.1.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
